Fix deps and tests